--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -156,7 +156,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 			padding-top: 5px;*/
 			.table-number {
 				text-align: center;
-				color: gray;
+				color: #91BFCC;
 				padding-top: 15px;
 				font-size: 23px;
 				font-family: cursive;
