--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9185,7 +9185,7 @@ a.button {
 			padding-top: 5px;*/ }
   .container .row .table .table-number {
     text-align: center;
-    color: gray;
+    color: #91BFCC;
     padding-top: 15px;
     font-size: 23px;
     font-family: cursive; }
