--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -24,9 +24,9 @@
 					</div>	
 				</div>
 				<div class="row" >
-					<div class="col col-45" id="home-order"  ><a href="#login"><img src="img/order4.png" class="cangiua"></a>
+					<div class="col col-45" id="home-order"  ><a href="#order"><img src="img/order4.png" class="cangiua"></a>
 					</div>	
-					<div class="col col-45" id="home-addstaff" ><a href="#login" >
+					<div class="col col-45" id="home-addstaff" ><a href="#order" >
 					<img src="img/addstaff.png" class="cangiua">
 					</a>
 					</div>	
@@ -43,7 +43,7 @@
 	</ion-side-menu-content>
 		
 		<ion-side-menu side="left">
-			 <ion-header-bar class="dark-bg expanded" style="background: url('img/straw1.jpg') center; background-size: cover; height: 22% !important;">
+			 <ion-header-bar class="dark-bg expanded" style="background: url('img/straw1.jpg') center; background-size: cover;     height: 22% !important;">
 	      		<div class="item-avatar">
 		      		<img src="img/howl's-moving-castle.jpg" >
 		      		
