--- a/www/templates/orderDetail.html
+++ b/www/templates/orderDetail.html
@@ -1,43 +1,40 @@
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <div ng-model="table">order for table {{tableId}}</div>
 <ion-header-bar class="bar-calm">
-	<div class="buttons button-left header-item">
-		<span class="left-buttons">
-        <a class="button ion-chevron-left" href="#table"></a>
+  <div class="buttons button-left header-item">
+    <span class="left-buttons">
+        <a class="button button-icon button-calm ion-chevron-left" href="#table"></a>
         </span>
     </div>
     <h1 class="title">Order for table {{tableId}}</h1>
-    <div class="search-wrap" style="margin-left: 81%; font-size: 21px; margin-top: 8px;"> 
-      <span class="ion-search"  id="search-orderdetails" style="position: absolute;"></span>
+    <div>
+      <div class="search" style="display: none;">
+        <input ng-model="query[queryBy]"/>
+      </div>
+      <span class="ion-search"></span>
     </div>
-
-<div class="bar bar-header item-input-inset" id="show-search" style="    top: -5px;
-    border: none;
-    display: flex;
-    background-color: transparent;
-    margin-left: -300px;">
-  <label class="item-input-wrapper" id="hide-search-wrap" style="background-color:white;">
-    <i class="icon ion-search" id="hide-search" style="color:#11C1F3; font-size: 20px;"></i>
-    <input type="search" placeholder="Search" ng-model="query[queryBy]">
-  </label>
- 
-</div>
-
 </ion-header-bar>
-<ion-content style="padding: 10px; background-color: white;">
+<ion-content>
 
-	<div class="orderdetalis-wrap" >
-    <div class="card clear-fix orderdetails-item" ng-repeat="item in items|filter:query"ng-click="addToList(item)" >
-       <span class="orderdetalis-foodName" > {{item.foodName}} </span>
-        <span class="item-note orderdetalis-foodPrice" style=""> {{item.foodPrice}}</span>
-    </div>
-  </div>
+  <div class="orderdetalis-wrap" >
+  <div class="card clear-fix orderdetails-item" ng-repeat="item in items |filter:query "ng-click="addToList(item);"  >
+     
+     <span class="orderdetalis-foodName" > {{item.foodName}} </span>
+      <span class="item-note orderdetalis-foodPrice" style=""> 
+      <!-- <img src="img/bgr-price.png"  > -->{{item.foodPrice}}</span>
+ 
+  </div> 
 
-  <div class="orderdetails-table">
-    <div class=" card orderdetails-item" ng-repeat="item in myCartItems">
-       <span class="orderdetalis-foodName" > {{item.foodName}} </span>
-       <span class="item-note orderdetalis-foodPrice" style=""> {{item.foodPrice}}</span>
-    </div> 
+</div>
+  <div class="orderdetails-table" style="float: left; width: 40%;">
+  <div> My order</div>
+
+        <div ng-repeat="item in myCartItems track by $index ">
+                     <td>{{item.foodName}}</td>
+                     <td >số lượng: {{item.foodQuantity}}</td> 
+                    <!--  <button ng-click="plusOne($index)">+1</button> -->
+                    <input type="number" id="foodQuantity" ng-model="item.foodQuantity">
+        </div>
+    <button ng-click="sendOrder()">SEND</button>
   </div>
 <!-- <div ng-repeat="item in items |filter:query">
   {{item.foodName}}
