--- a/www/templates/order.html
+++ b/www/templates/order.html
@@ -6,7 +6,13 @@
         <a class="button button-icon button-calm ion-chevron-left" href="#table"></a>
         </span>
     </div>
-    <h1 class="title">Order for table {{tableId}}</h1>
+    <h1 class="title">Orders</h1>
+    <div>
+      <div class="search" style="display: none;">
+        <input ng-model="query[queryBy]"/>
+      </div>
+      <span class="ion-search"></span>
+    </div>
 </ion-header-bar>
 
 
