--- a/www/templates/order.html
+++ b/www/templates/order.html
@@ -15,63 +15,63 @@
 <ion-content>
 <div class="orderdetalis-wrap" >
   <div class="card clear-fix orderdetails-item" ng-repeat="item in myOrder1"  >
-     <span class="orderdetalis-foodName" > bafn 1</span>
+     <span class="orderdetalis-foodName" > Table 1</span>
      <span class="orderdetalis-foodName" > {{item.foodName}} </span>
       <span class="item-note orderdetalis-foodPrice" style=""> 
       <!-- <img src="img/bgr-price.png"  > -->{{item.foodQuantity}}</span>
  
   </div>
   <div class="card clear-fix orderdetails-item" ng-repeat="item in myOrder2"  >
-     <span class="orderdetalis-foodName" > bafn 2</span>
+     <span class="orderdetalis-foodName" > Table 2</span>
      <span class="orderdetalis-foodName" > {{item.foodName}} </span>
       <span class="item-note orderdetalis-foodPrice" style=""> 
       <!-- <img src="img/bgr-price.png"  > -->{{item.foodQuantity}}</span>
  
   </div>
   <div class="card clear-fix orderdetails-item" ng-repeat="item in myOrder3"  >
-     
+     <span class="orderdetalis-foodName" > Table 3</span>
      <span class="orderdetalis-foodName" > {{item.foodName}} </span>
       <span class="item-note orderdetalis-foodPrice" style=""> 
       <!-- <img src="img/bgr-price.png"  > -->{{item.foodQuantity}}</span>
  
   </div>
   <div class="card clear-fix orderdetails-item" ng-repeat="item in myOrder4"  >
-     
+     <span class="orderdetalis-foodName" > Table 4</span>
      <span class="orderdetalis-foodName" > {{item.foodName}} </span>
       <span class="item-note orderdetalis-foodPrice" style=""> 
       <!-- <img src="img/bgr-price.png"  > -->{{item.foodQuantity}}</span>
  
   </div>
   <div class="card clear-fix orderdetails-item" ng-repeat="item in myOrder5"  >
-     
+     <span class="orderdetalis-foodName" > Table 5</span>
      <span class="orderdetalis-foodName" > {{item.foodName}} </span>
       <span class="item-note orderdetalis-foodPrice" style=""> 
       <!-- <img src="img/bgr-price.png"  > -->{{item.foodQuantity}}</span>
  
   </div>
   <div class="card clear-fix orderdetails-item" ng-repeat="item in myOrder6"  >
-     
+     <span class="orderdetalis-foodName" > Table 6</span>
      <span class="orderdetalis-foodName" > {{item.foodName}} </span>
       <span class="item-note orderdetalis-foodPrice" style=""> 
       <!-- <img src="img/bgr-price.png"  > -->{{item.foodQuantity}}</span>
  
   </div>
   <div class="card clear-fix orderdetails-item" ng-repeat="item in myOrder7"  >
-     
+     <span class="orderdetalis-foodName" > Table 7</span>
      <span class="orderdetalis-foodName" > {{item.foodName}} </span>
       <span class="item-note orderdetalis-foodPrice" style=""> 
       <!-- <img src="img/bgr-price.png"  > -->{{item.foodQuantity}}</span>
  
   </div>
   <div class="card clear-fix orderdetails-item" ng-repeat="item in myOrder8"  >
-     
+     <span class="orderdetalis-foodName" > Table 8</span>
      <span class="orderdetalis-foodName" > {{item.foodName}} </span>
       <span class="item-note orderdetalis-foodPrice" style=""> 
       <!-- <img src="img/bgr-price.png"  > -->{{item.foodQuantity}}</span>
  
   </div>
   <div class="card clear-fix orderdetails-item" ng-repeat="item in myOrder9"  >
-     
+     <span class="orderdetalis-foodName" > Table 9</span>
      <span class="orderdetalis-foodName" > {{item.foodName}} </span>
       <span class="item-note orderdetalis-foodPrice" style=""> 
       <!-- <img src="img/bgr-price.png"  > -->{{item.foodQuantity}}</span>
