--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,7 +1,7 @@
 <ion-header-bar class="bar-calm">
-	<div class="buttons button-left header-item">
-		<span class="left-buttons">
-        <!--   	<button class="button button-icon button-clear ion-android-menu" ng-click="toggleLeft()"></button> -->
+  <div class="buttons button-left header-item">
+    <span class="left-buttons">
+        <!--    <button class="button button-icon button-clear ion-android-menu" ng-click="toggleLeft()"></button> -->
         <a class="button button-icon button-calm ion-home" href="#home"></a>
         </span>
     </div>
@@ -9,52 +9,18 @@
 
 </ion-header-bar>
 <ion-content style = "background-color:#484746;"> 
-  <ion-refresher
-    pulling-text="Pull to refresh..."
-    on-refresh="doRefresh()">
-  </ion-refresher>
+ 
   <div class="card list">
     <div class="item item-divider" id="itemheader">Food Name <span class="item-note"id="itemheader"> Price</span></div>
-    <div class="item item-food" ng-repeat="item in items"  id="food-{{$index +1 }}"> 
-      {{item.foodName}} <span class="item-note" ng-click="editing=true"id="foodPrice" ng-hide="editing"> {{item.foodPrice}}</span>
-        <span class="item-note" ng-show="editing"><input id="nameFix"ng-blur="editing = false" type="text" ng-model="item.foodPrice"/>
-          <a data-ng-click="editing=false"></a>
-          <!-- <button ng-click="saveEdit()">save edit</button> -->
-      </span>
-
-
-      <button ng-click="remove(item)">Remove</button>
+    <div class="item item-food" ng-repeat="item in items" ng-click="show()"> 
+      {{item.foodName}} <span class="item-note"> {{item.foodPrice}}</span>
+       
     </div>
       <div class="item ion-plus-round" ng-click="AddFood.show()">Add Item</div>
-      <div class="item ion-edit" >Edit Item</div>
-      <div class="item ion-close-circled" ng-click="DeleteFood.show()">Delete Item</div>
+   
   </div> 
-
+<!-- <button ng-click="show()">show</button> -->
 </ion-content>
-
-
-<script id="templates/ChangeDetails.html" type="text/ng-template">
-      <ion-modal-view  style = "background-color:#484746; min-height: 220px !important;">
-        
-        <ion-content class="padding" >
-          <div class="list menu-change-detail-food">
-
-            <div class="item change-edit-food">
-              <button class="button button-full button-positive " ng-click="EditFood.show()" id="change-edit-food"> <span class="ion-edit" style="float:right">  </span> Edit Food </button>
-            </div>
-
-            <div class="item change-delete-food">
-              <button class="button button-full button-positive" ng-click="DeleteFood.show()"> <span class=" ion-close-circled" style="float:right">  </span>  Delete Food </button>
-            </div>
-
-            <button class="button button-full button-positive Change-cancel" ng-click="ChangeDetails.hide()">CANCEL</button>
-          </div>
-        </ion-content>
-      </ion-modal-view>
-    </script>
-    
-
-
 <script id="templates/AddFood.html" type="text/ng-template">
       <ion-modal-view  style = "background-color:#484746;">
         <ion-header-bar class="bar bar-header bar-positive" id="AddFood">
@@ -81,71 +47,4 @@
     </script>
     
 
-<script id="templates/EditFood.html" type="text/ng-template">
-      <ion-modal-view  style = "background-color:#484746;">
-        <ion-header-bar class="bar bar-header bar-positive" id="EditFood">
-          <h1 class="title" style="left:17px;">Edit Food Item</h1>
-          <button class="button button-clear button-primary ion-close-round"style="padding-right:5px; padding-bottom: 3px;" ng-click="EditFood.hide()" ></button>
-        </ion-header-bar>
-        <ion-content class="padding" >
-          <div class="list menu-edit-food">
 
-            <label class="item item-input">
-              <span class="input-label" style=" margin: -5px; background-color: #F77B55; text-align: center; color: white; width: 32%; padding-top: 8px; padding-bottom: 4px;"> <img src="img/icon_food.png"></img> </span>
-              <input  ng-model="editItem.foodName" id="foodName" type="text" style="padding-left: 10px;" placeholder="Food Name" value="{{item.foodName}}" required>
-            </label>
-
-            <label class="item item-input">
-              <span class="input-label" style="background-color: #F77B55; text-align: center; color: white;width: 30%; padding-bottom: 1px; padding-top: 4px;"><img src="img/icon-money.png"></img> </span>
-              <input ng-model="editItem.foodPrice" id="foodPrice" type="text"  style="padding-left: 10px;" placeholder="Price" value="{{item.foodPrice}}" required>
-            </label>
-            
-            <button class="button button-full button-positive edit-ok" ng-click="EditItem(editItem)">OK</button>
-
-            <button class="button button-full button-positive edit-cancel" ng-click="EditFood.hide()">CANCEL</button>
-          </div>
-        </ion-content>
-      </ion-modal-view>
-    </script>
-    
-<!-- <ion-header-bar class="bar-positive">
-      <h1 class="title">Contacts</h1>
-      <div class="buttons">
-        <button class="button button-icon ion-compose" ng-click="modal.show()">
-        </button>
-      </div>
-    </ion-header-bar>
-    <ion-content>
-      <ion-list>
-        <ion-item ng-repeat="contact in contacts">
-          {{contact.name}}
-        </ion-item>
-      </ion-list>
-    </ion-content>
-    
-    <script id="templates/modal.html" type="text/ng-template">
-      <ion-modal-view style="width:60% ;margin:auto;height:auto;margin-top:50%;margin-bottom:50%">
-        <ion-header-bar class="bar bar-header bar-positive">
-          <h1 class="title">New Contact</h1>
-          <button class="button button-clear button-primary" ng-click="modal.hide()">Cancel</button>
-        </ion-header-bar>
-        <ion-content class="padding" >
-          <div class="list">
-            <label class="item item-input">
-              <span class="input-label">First Name</span>
-              <input ng-model="newUser.firstName" type="text">
-            </label>
-            <label class="item item-input">
-              <span class="input-label">Last Name</span>
-              <input ng-model="newUser.lastName" type="text">
-            </label>
-            <label class="item item-input">
-              <span class="input-label">Email</span>
-              <input ng-model="newUser.email" type="text">
-            </label>
-            <button class="button button-full button-positive" ng-click="createContact(newUser)">Create</button>
-          </div>
-        </ion-content>
-      </ion-modal-view>
-    </script>
-     -->
