--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -8,7 +8,7 @@
     <h1 class="title">Menu</h1>
 
 </ion-header-bar>
-<ion-content style = "background-color:#484746;"> 
+<ion-content style="background-color:#484746;padding:7px"> 
  
   <div class="card list">
     <div class="item item-divider" id="itemheader">Food Name <span class="item-note"id="itemheader"> Price</span></div>
@@ -20,7 +20,7 @@
    
   </div> 
 <!-- <button ng-click="show()">show</button> -->
-</ion-content>
+</ion-content >
 <script id="templates/AddFood.html" type="text/ng-template">
       <ion-modal-view  style = "background-color:#484746;">
         <ion-header-bar class="bar bar-header bar-positive" id="AddFood">
