--- a/www/templates/order.html
+++ b/www/templates/order.html
@@ -39,7 +39,7 @@
 </div>
 <div class="row">
 
-  <div class="list card" class="col-offset-33">
+  <div class="list card col col-30">
       <h4 class="header-order-h4">Table 4</h4>
         <div class="item item-body"id="test" ng-repeat="item in myOrder4">{{item.foodName}} <span class="item-note"> {{item.foodQuantity}}</span>  
         </div>     
@@ -47,15 +47,15 @@
 
   </div>
 
-  <div class="list card" class="col-offset-33">
+  <div class="list card col col-30">
       <h4 class="header-order-h4">Table 5</h4>
-        <div class="item item-body"ng-repeat="item in myOrder5">{{item.foodName}} <span class="item-note"> {{item.foodQuantity}}</span>  
+        <div class="item item-body" id="test" ng-repeat="item in myOrder5">{{item.foodName}} <span class="item-note"> {{item.foodQuantity}}</span>  
         </div>     
   </div>
 
-  <div class="list card" class="col-offset-33">
+  <div class="list card col col-30">
       <h4 class="header-order-h4">Table 6</h4>
-        <div class="item item-body"  ng-repeat="item in myOrder6">{{item.foodName}} <span class="item-note"> {{item.foodQuantity}}</span>  
+        <div class="item item-body" id="test" ng-repeat="item in myOrder6">{{item.foodName}} <span class="item-note"> {{item.foodQuantity}}</span>  
         </div>     
 
   </div>
@@ -63,23 +63,23 @@
 </div>
 <div class="row">
 
-  <div class="list card" class="col-offset-33">
+  <div class="list card col col-30">
       <h4 class="header-order-h4">Table 7</h4>
-        <div class="item item-body" ng-repeat="item in myOrder7">{{item.foodName}} <span class="item-note"> {{item.foodQuantity}}</span>  
+        <div class="item item-body" id="test" ng-repeat="item in myOrder7">{{item.foodName}} <span class="item-note"> {{item.foodQuantity}}</span>  
         </div>     
      
 
   </div>
 
-  <div class="list card" class="col-offset-33" >
+  <div class="list card col col-30" >
       <h4 class="header-order-h4">Table 8</h4>
-        <div class="item item-body"ng-repeat="item in myOrder8">{{item.foodName}} <span class="item-note"> {{item.foodQuantity}}</span>  
+        <div class="item item-body" id="test" ng-repeat="item in myOrder8">{{item.foodName}} <span class="item-note"> {{item.foodQuantity}}</span>  
         </div>     
   </div>
 
-  <div class="list card" class="col-offset-33" >
+  <div class="list card col col-30" >
       <h4 class="header-order-h4">Table 9</h4>
-        <div class="item item-body" ng-repeat="item in myOrder9" >{{item.foodName}} <span class="item-note"> {{item.foodQuantity}}</span>  
+        <div class="item item-body" id="test"ng-repeat="item in myOrder9" >{{item.foodName}} <span class="item-note"> {{item.foodQuantity}}</span>  
         </div>     
 
   </div>
