style order(linh tinh)

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -18,6 +18,10 @@
 #order {
 	background-color:#f2f2f2 ;
 }
+#order-height{
+	/*min-height:100px;*/
+	position: relative;
+}
 /*#order-bar {
 	background-color: #fcc465
 }*/
