--- a/www/templates/order.html
+++ b/www/templates/order.html
@@ -15,7 +15,7 @@
 <ion-content id="order">
  <div class="row">
 
-  <div class="list card col col-30" >
+  <div class="list card col col-30" id="order-height" >
       <h4 class="header-order-h4">Table 1</h4>
         <div class="item item-body"id="test"ng-repeat="item in myOrder1">{{item.foodName}} <span class="item-note"> {{item.foodQuantity}}</span>  
         </div>     
@@ -23,23 +23,24 @@
 
   </div>
 
-  <div class="list card col col-30" >
+  <div class="list card col col-30"id="order-height" >
       <h4 class="header-order-h4">Table 2</h4>
         <div class="item item-body" id="test"ng-repeat="item in myOrder2">{{item.foodName}} <span class="item-note"> {{item.foodQuantity}}</span>  
         </div>     
   </div>
 
-  <div class="list card col col-30" >
+  <div class="list card col col-30" id="order-height">
       <h4 class="header-order-h4">Table 3</h4>
-        <div class="item item-body" id="test" ng-repeat="item in myOrder3">{{item.foodName}} <span class="item-note"> {{item.foodQuantity}}</span>  
+        <div class="item item-body"id="test"ng-repeat="item in myOrder3">{{item.foodName}} <span class="item-note"> {{item.foodQuantity}}</span>  
         </div>     
+     
 
   </div>
   
 </div>
 <div class="row">
 
-  <div class="list card col col-30">
+  <div class="list card col col-30"id="order-height">
       <h4 class="header-order-h4">Table 4</h4>
         <div class="item item-body"id="test" ng-repeat="item in myOrder4">{{item.foodName}} <span class="item-note"> {{item.foodQuantity}}</span>  
         </div>     
@@ -47,13 +48,13 @@
 
   </div>
 
-  <div class="list card col col-30">
+  <div class="list card col col-30"id="order-height">
       <h4 class="header-order-h4">Table 5</h4>
         <div class="item item-body" id="test" ng-repeat="item in myOrder5">{{item.foodName}} <span class="item-note"> {{item.foodQuantity}}</span>  
         </div>     
   </div>
 
-  <div class="list card col col-30">
+  <div class="list card col col-30"id="order-height">
       <h4 class="header-order-h4">Table 6</h4>
         <div class="item item-body" id="test" ng-repeat="item in myOrder6">{{item.foodName}} <span class="item-note"> {{item.foodQuantity}}</span>  
         </div>     
@@ -63,7 +64,7 @@
 </div>
 <div class="row">
 
-  <div class="list card col col-30">
+  <div class="list card col col-30"id="order-height">
       <h4 class="header-order-h4">Table 7</h4>
         <div class="item item-body" id="test" ng-repeat="item in myOrder7">{{item.foodName}} <span class="item-note"> {{item.foodQuantity}}</span>  
         </div>     
@@ -71,13 +72,13 @@
 
   </div>
 
-  <div class="list card col col-30" >
+  <div class="list card col col-30" id="order-height">
       <h4 class="header-order-h4">Table 8</h4>
         <div class="item item-body" id="test" ng-repeat="item in myOrder8">{{item.foodName}} <span class="item-note"> {{item.foodQuantity}}</span>  
         </div>     
   </div>
 
-  <div class="list card col col-30" >
+  <div class="list card col col-30"id="order-height" >
       <h4 class="header-order-h4">Table 9</h4>
         <div class="item item-body" id="test"ng-repeat="item in myOrder9" >{{item.foodName}} <span class="item-note"> {{item.foodQuantity}}</span>  
         </div>     
