--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -26,7 +26,7 @@
 				<div class="row" >
 					<div class="col col-45" id="home-order"  ><a href="#order"><img src="img/order4.png" class="cangiua"></a>
 					</div>	
-					<div class="col col-45" id="home-addstaff" ><a href="#order" >
+					<div class="col col-45" id="home-addstaff" ><a href="#report" >
 					<img src="img/addstaff.png" class="cangiua">
 					</a>
 					</div>	
