--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -27,7 +27,7 @@
 					<div class="col col-45" id="home-order"  ><a href="#order"><img src="img/order4.png" class="cangiua"></a>
 					</div>	
 					<div class="col col-45" id="home-addstaff" ><a href="#report" >
-					<img src="img/addstaff.png" class="cangiua">
+					<img src="img/addstaff1.png" class="cangiua">
 					</a>
 					</div>	
 				</div>
