--- a/www/css/style.css
+++ b/www/css/style.css
@@ -9,7 +9,7 @@
     overflow: hidden;
     margin: 20px 5px;
     border-radius: 2px;
-    background-color: #ffd47b;
+    /*background-color: #ffd47b;*/
 }
 #test {
 	padding: 4px !important;
@@ -22,7 +22,26 @@
 	/*min-height:100px;*/
 	position: relative;
 }
+
 /*#order-bar {
 	background-color: #fcc465
 }*/
 /*END CSS for orders*/
+/*CSS for STAFF*/
+#staff {
+	margin: 20px;
+	padding: 1px;
+}
+#staff-button {
+	margin: 20px;
+	text-align: center;
+	font-weight: bold;
+	padding: 15px;
+	padding-bottom: 5px;
+	background-color: #f77b55;
+	color: white;
+}
+#staff-content {
+	background-color: #49505a;
+}
+/*END STAFF*/
