--- a/www/templates/print.html
+++ b/www/templates/print.html
@@ -7,3 +7,24 @@
     <h1 class="title">Print</h1>
     
 </ion-header-bar>
+<ion-content>
+	<div class="list">
+
+  <label class="item item-input item-select">
+    <div class="input-label">
+      Choose a printer
+    </div>
+    <select>
+      <option>Printer 1</option>
+      <option selected>Print 2</option>
+      <option>Printer 3</option>
+    </select>
+  </label>
+
+</div>
+	<div class="card">
+  <div class="item item-text-wrap">
+   Coming soon....
+  </div>
+</div>
+</ion-content>
