--- a/www/templates/report.html
+++ b/www/templates/report.html
@@ -36,7 +36,7 @@
 
 </ion-content>
 <script id="templates/AddStaffModal.html" type="text/ng-template">
-      <ion-modal-view  style = "background-color:#484746;">
+      <ion-modal-view  style = "background-color:#484746; height: 315px;">
         <ion-header-bar class="bar bar-header bar-positive" id="AddFood">
           <h1 class="title" style="left:17px;">New Staff Member</h1>
           <button class="button button-clear button-primary ion-close-round"style="padding-right:5px; padding-bottom: 3px;" ng-click="AddStaffModal.hide()" ></button>
