--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -358,7 +358,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 		float: left; 
 		width: 40%;  
 		height: 60px; 
-		background-color: #E8E84C;; 
+		background-color: white;
 		position: relative;
 		.orderdetalis-foodName {
 			float:left; 
@@ -380,7 +380,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 }
 
 .orderdetalis-wrap{
-	/*background-color: red;*/
+	background-color: #f77b55;
 	float: left; 
 	width: 60%;
 	padding-top: 5px;
