--- a/www/css/style.css
+++ b/www/css/style.css
@@ -16,7 +16,7 @@
 	font-size: 13px;
 }
 #order {
-	background-color:#f2f2f2 ;
+	background-color:#ffd47b ;
 }
 #order-height{
 	/*min-height:100px;*/
