--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -34,7 +34,7 @@
 				<div class="row">
 					<div class="col col-45" id="home-print" ><a href="#print"><img src="img/print.png" class="cangiua"></a>
 					</div>	
-					<div class="col col-45" id="home-about"  ><a href="#login"><img src="img/about1.png" class="cangiua"></a>
+					<div class="col col-45" id="home-about"  ><a href="#about"><img src="img/about1.png" class="cangiua"></a>
 					</div>	
 				</div>
 			
