--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9393,3 +9393,7 @@ a.button {
   font-size: 20px !important;
   margin-top: 2px;
   border: none; }
+
+.staff .item-avatar img:first-child {
+  left: 4px !important;
+  top: 16px !important; }
