--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -411,6 +411,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 		img:first-child {
 			 left: 4px !important;
 			 top: 16px !important;
+			background-color:#75d1e0 ;
 		}
 	}
 }
