--- a/www/templates/report.html
+++ b/www/templates/report.html
@@ -20,7 +20,7 @@
 
 <div class="list card staff" id="staff" ng-repeat="user in users">
  <div class="item item-avatar">
-    <img src="img/giraffy1.png">
+    <img src="img/casau2a.png">
     <h2>{{user.userName}}</h2>
     <p> {{user.email}}</p>
     <p>Waiter</p>
