--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -45,7 +45,7 @@
 		<ion-side-menu side="left">
 			 <ion-header-bar class="dark-bg expanded" style="background: url('img/straw1.jpg') center; background-size: cover;     height: 22% !important;">
 	      		<div class="item-avatar">
-		      		<img src="img/howl's-moving-castle.jpg" >
+		      		<img src="img/giraffy1.png" style="background-color:#75d1e0" >
 		      		
 	      		</div>
 	      		<div class="user-name">
